--- a/src/njk/_partials/album.njk
+++ b/src/njk/_partials/album.njk
@@ -3,7 +3,7 @@
     <ul class="list-unstyled">
       {% for disc in discography %}
       <li class="media">
-        <img class="album" src="../assets/img/discs/{{disc.image}}" alt="{{disc.title}}">
+        <img class="album fluid" src="../assets/img/discs/{{disc.image}}" alt="{{disc.title}}">
         <div class="media-body">
           <h5 class="mt-0 mb-1">{{disc.title}}</h5>
           {{disc.year}}
