--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -2,9 +2,17 @@
     background: url(/assets/img/queen-band-wallpaper-thin.jpg) no-repeat center;
     background-size: cover;
     color: white;
-    padding-top: 12rem
+    
+    padding-bottom: 6rem;
   }
   
   .jumbotron {
     margin-bottom: 30px;
+  }
+
+  .jumbotext {
+
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    -webkit-text-stroke: 1px black;
+    font-size: 6rem;
   }
