--- a/src/njk/_partials/album.njk
+++ b/src/njk/_partials/album.njk
@@ -1,5 +1,5 @@
 <h1>Discography</h1>
-    <div class="col">
+    <div class="col-sm-4">
     <ul class="list-unstyled">
       {% for disc in discography %}
       <li class="media">
