--- a/src/njk/_partials/footer.njk
+++ b/src/njk/_partials/footer.njk
@@ -1,4 +1,6 @@
+<footer class ="row">
 <p id="legal" class="center-block text-center">
   <small>&copy; <span class="copyright-year"></span>
   A class project by Eric Vela.
 </p>
+</footer>
