--- a/src/njk/_partials/member.njk
+++ b/src/njk/_partials/member.njk
@@ -2,7 +2,7 @@
 <div class="row">
 {% for member in members %}
 
-<div class="col-md-3"><a href="{{member.slug}}.html" class="card-link">
+<div class="col-sm-6-lg-3"><a href="{{member.slug}}.html" class="card-link">
 <div class="card">
   <img class="card-img-top" src="../assets/img/members/{{member.imagebw}}" alt="{{member.name}}">
   <div class="card-body">
