--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,3 +1,5 @@
-.footer {
-    background-color: red;
+footer {
+    width: 100%;
+    background-color: darkslateblue;  
+    margin-bottom: 0px;
 }
