fixed jumbotron, added more css

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -1,6 +1,6 @@
 footer {
     width: 100%;
-    background-color: darkslateblue;  
+    background-color: #2e47c1;  
     margin-bottom: 0px;
     p{
         text-align: auto;
