--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,7 +1,7 @@
-/* nav */
 
 .navbar {
   margin-bottom: 0px;
+  background-color: #2e47c1  !important;
   a:hover{
     text-decoration: underline;
   }
