--- a/src/njk/_partials/jumbotron.njk
+++ b/src/njk/_partials/jumbotron.njk
@@ -1,31 +1,6 @@
-{# <div class="jumbotron banner text-center">
-  <h1 class= "jumbotext">Queen</h1>
-</div> #}
 
-
-<div id="carousel" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <div class="jumbotron banner text-center img-fluid d-block w-100" src="assets/img/queen-live-on-stage.jpg" alt="First slide">
-    </div>
-    <div class="carousel-item">
-      <img class="jumbotron banner text-center img-fluid d-block w-100" src="assets/img/queen-band-wallpaper-thin.jpg" alt="Second slide">
-    </div>
-    <div class="carousel-item">
-      <img class="jumbotron banner text-center img-fluid d-block w-100" src="assets/img/queen-band-early.jpg" alt="Third slide">
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
+<div class="jumbotron banner text-center">
+ 
+  <h1 class="jumbotext">Queen</h1>
+  
 </div>
