--- a/src/scss/_detail.scss
+++ b/src/scss/_detail.scss
@@ -2,3 +2,15 @@
 
     size: 100%;
 }
+
+
+
+@media only screen and (min-width: 600px)
+{
+    .info {
+        border-right: 1.5px solid darkslategray;
+    }
+}
+.info {
+    margin-bottom: 20px;
+}
