--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -1,17 +1,17 @@
 .jumbotron.banner {
-    background-size: cover;
-    color: white;
-    
-    padding-bottom: 6rem;
-  }
+  background: url(/assets/img/queen-live-on-stage.jpg) no-repeat center;
+  background-size: cover;
+  color: white;
   
-  .jumbotron {
-    margin-bottom: 30px;
-  }
+  padding-bottom: 6rem;
+}
 
-  .jumbotext {
+.jumbotron {
+  margin-bottom: 30px;
+}
 
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    -webkit-text-stroke: 1px black;
-    font-size: 6rem;
-  }
+.jumbotext {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  -webkit-text-stroke: 3px black;
+  font-size: 6rem;
+}
