didn't save right before commit- oops

--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -4,7 +4,7 @@
 {% block content %}
 <article class="container">
   <div class="row">
-    <div class="leftside col-sm-6 col-md-4 info">
+    <div class="col-sm-6 col-md-4 info">
 
       <img class = "img-fluid" src="assets/img/members/{{members.image}}" alt= "{{members.name}}"/>
       <h3>{{members.name}}</h3>
