--- a/src/njk/_partials/album.njk
+++ b/src/njk/_partials/album.njk
@@ -1,7 +1,7 @@
 <h1>Discography</h1>
 <div class= "row">
     {%for disc in discography%}
-  <div class="col-sm-6 col-md-4">
+  <div class="col-centered col-sm-6 col-md-4">
       <ul class="list-unstyled">
         <li class="albums">
     <img class="img-fluid album-image" src=assets/img/discs/{{disc.image}} alt="Album Cover">
