--- a/src/scss/_jumbotron.scss
+++ b/src/scss/_jumbotron.scss
@@ -1,14 +1,11 @@
-.jumbotron.banner {
-  background: url(assets/img/queen-live-on-stage.jpg) no-repeat center;
+.jumbotron {
+  background: url(../assets/img/queen-live-on-stage.jpg) no-repeat center;
   background-size: cover;
   color: white;
   
   padding-bottom: 6rem;
 }
 
-.jumbotron {
-  margin-bottom: 30px;
-}
 
 .jumbotext {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
