--- a/src/njk/_layouts/detail.njk
+++ b/src/njk/_layouts/detail.njk
@@ -26,7 +26,7 @@
     </div>
     
     <div class="col-sm-6 col-md-8 biography">
-     <h1> {{members.name}}</h1>
+     <h1>About {{members.name}}</h1>
       {{members.text| safe}}
 
 
